--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "next": "16.1.1",
+    "next-auth": "^5.0.0-beta.22",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
